syntax = "proto3";

package atomix.server;

import "google/protobuf/any.proto";
import "atomix/controller/partition.proto";

option java_package = "io.atomix.server";
option java_outer_classname = "AtomixConfigProto";
option java_multiple_files = true;

// Atomix server configuration
message ServerConfig {
    int32 partition_id = 1;
    atomix.controller.PartitionGroupId partition_group = 2;
    NodeConfig node = 3;
    NodeConfig controller = 4;
    TlsConfig tls = 5;
    ProtocolConfig protocol = 6;
}

// TLS configuration
message TlsConfig {
    bool enabled = 1;
    string key_path = 2;
    string cert_path = 3;
}

// Cluster node configuration
message NodeConfig {
    string id = 1;
    string host = 2;
    int32 port = 3;
}

// Protocol configuration
message ProtocolConfig {
    string type = 1;
    google.protobuf.Any config = 2;
}
